# creeper

./: .env.example  .gitignore  DEBUGGING.md  INSTALL_RUST.md  README.md  SETUP.md  TESTING_LIVING_DOCUMENT.md  creeper_brief.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  realtime_assistant_prompts.md
backend/: package.json
backend/src/: index.ts
backend/src/routes/: documents.ts  health.ts  ingest.ts  insight.ts  sessions.ts
backend/src/services/: embeddings.ts  openai.ts  supabase.ts
desktop/: components.json  index.html  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  create_placeholder_icon.sh  tauri.conf.json
desktop/src-tauri/icons/: create_icon.sh  create_icons.sh
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: DocumentEditor.tsx  SessionList.tsx  SessionView.tsx  Settings.tsx  (+1 more)
scripts/: run-migration-005.ts  test-chunk-1.sh  test-chunk-10.sh  test-chunk-11.sh  test-chunk-12.sh  test-chunk-13.sh  test-chunk-14.sh  test-chunk-15.sh  test-chunk-16.sh  test-chunk-2.sh  test-chunk-3.sh  test-chunk-4.sh  test-chunk-5.sh  test-chunk-6.sh  test-chunk-7.sh  test-chunk-8.sh  test-chunk-9.sh  test-integration.sh  test-supabase-connection.ts
shared/: package.json
shared/src/: api.ts  index.ts  types.ts
supabase/: README.md
supabase/migrations/: 001_initial_schema.sql  002_enable_pgvector.sql  003_vector_search_function.sql  004_session_based_insights.sql  005_living_document.sql  006_session_names.sql  run_all_migrations.sql
(+3 files in other folders)
